Add link to email and pub gpg key

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/martin-esteban-gutierrez-gallo/" class="icon brands fa-linkedin">Linkedin</a></li>
 								<li><a href="https://github.com/cafade" class="icon brands fa-github">Github</a></li>
+								<li><a href="mailto:esteban@megutierrez.site" class="icon far fa-envelope">Email</a></li>
+								<li><a href="mypubkey.html" class="icon fas fa-file-code" target="_blank">OpenGPG</a></li>
 							</ul>
 						</footer>
 					</section>
