Add email tag to copyright

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 					<footer id="footer">
 						<ul class="copyright">
 							<li>&copy; Martin E. Gutierrez</li>
+							<li><a href="mailto:esteban@megutierrez.site" id="email-tag">esteban@megutierrez.site</a></li>
 							<li><a href="https://html5up.net/license" id="license"></a></li>
 						</ul>
 					</footer>
