Move function call of appendContent exe on preload In some cases the content was not appended until a page reload.

--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
 			<script>
 			if ('addEventListener' in window) {
 
+                var userLanguage = (navigator.language || navigator.userLanguage).split("-")[0];
+                if (userLanguage == "es") {
+                    appendContent(userLanguage)
+                } else {
+                    appendContent("en")
+                }
+
 				window.addEventListener('load', function() { 
 					document.body.className = document.body.className.replace(/\bis-preload\b/, ''); 
 				});
