Add navigation - link to notes

--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
 				<!-- Main -->
 					<section id="main">
 						<header id="header">
-							<div class="lang-links">
-								<ul>
-									<li><a href="#" onclick="appendContent('en'); return false;">en</a></li>
-									<li>/</li>
-									<li><a href="#" onclick="appendContent('es'); return false;">es</a></li>
-								</ul>
+							<div class="links">
+								<div class="nav-links"><a href="https://megutierrez.site/notes" title="English only">Notes</a></div>
+								<div class="lang-links">
+									<ul>
+										<li><a href="#" onclick="appendContent('en'); return false;">en</a></li>
+										<li>/</li>
+										<li><a href="#" onclick="appendContent('es'); return false;">es</a></li>
+									</ul>
+								</div>
 							</div>
 							<h1>Martin Esteban Gutierrez</h1>
 							<p id="career"></p>
